--- a/pom.xml
+++ b/pom.xml
@@ -240,6 +240,7 @@
         <!-- spring-io platform uses this property for selenium version -->
         <smartsprites.version>0.2.11</smartsprites.version>
         <slick.webjars.version>1.5.0</slick.webjars.version>
+        <pace.webjars.version>1.0.2</pace.webjars.version>
         <sockjsclient.webjars.version>1.0.3</sockjsclient.webjars.version>
         <!--spring.cloud.version>Brixton.M2</spring.cloud.version-->
         <!--spring-data-releasetrain.version>Hopper-M1</spring-data-releasetrain.version-->
