Update the flyway version

--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,7 @@
         <drools.version>6.3.0.Final</drools.version>
         <ehcache.jcache.version>1.0.1</ehcache.jcache.version>
         <extjs.webjars.version>5.1.1-light</extjs.webjars.version>
+        <flyway.version>4.0</flyway.version>
         <geotools.version>15-beta</geotools.version>
         <google.concurrentlinkedhashmap.version>1.4.2</google.concurrentlinkedhashmap.version>
         <google.geocoder.version>0.16</google.geocoder.version>
