--- a/pom.xml
+++ b/pom.xml
@@ -195,7 +195,7 @@
         <maven.coveralls.plugin.version>3.1.0</maven.coveralls.plugin.version>
         <maven.jar.plugin.version>2.4</maven.jar.plugin.version>
         <maven.jacoco.plugin.version>0.7.5.201505241946</maven.jacoco.plugin.version>
-        <maven.site.plugin.version>3.5</maven.site.plugin.version>
+        <maven.site.plugin.version>3.5.1</maven.site.plugin.version>
         <maven.failsafe.plugin.version>2.19</maven.failsafe.plugin.version>
         <maven.enforcer.plugin.version>1.3.1</maven.enforcer.plugin.version>
         <maven.release.plugin.version>2.5.3</maven.release.plugin.version>
@@ -240,6 +240,7 @@
         <redis.embedded.version>0.6</redis.embedded.version>
         <riskified.version>1.0.1.7</riskified.version>
         <selenium.version>2.47.0</selenium.version>
+		<spring-social-twitter.version>1.1.3.PATCHED-2</spring-social-twitter.version>
         <!-- spring-io platform uses this property for selenium version -->
         <smartsprites.version>0.2.11</smartsprites.version>
         <slick.webjars.version>1.5.0</slick.webjars.version>
