--- a/pom.xml
+++ b/pom.xml
@@ -144,8 +144,8 @@
         <gridgain.version>6.6.8</gridgain.version>
         <hibernate.version>5.1.0.Final</hibernate.version>
         <hibernate.hydrate.version>2.2</hibernate.hydrate.version>
-        <!-- Upgrade once jackson-datatype-hibernate5 is out and also hazelcast supports hibernate5-->  <!-- Remove once boot updates -->
-        <hazelcast.version>3.6.1</hazelcast.version>
+        <!-- Upgrade once hazelcast supports hibernate5-->  <!-- Remove once boot updates -->
+        <hazelcast.version>3.6.2</hazelcast.version>
         <infinispan.version>8.1.0.Final</infinispan.version>
         <itextpdf5.version>5.5.5</itextpdf5.version>
         <!-- Remove when https://github.com/spring-projects/spring-boot/issues/5296 is done -->
