--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,7 @@
         <commons.vfs2.azure.version>1.2.patched</commons.vfs2.azure.version>
         <commons.jcs.version>2.0-beta-1</commons.jcs.version>
         <compile-testing.version>0.8</compile-testing.version>
+        <cybersource.version>6.1.0</cybersource.version>
         <docker.maven.plugin.version>0.4.0</docker.maven.plugin.version>
         <drools.version>6.4.0.Final</drools.version>
         <ehcache.jcache.version>1.0.1</ehcache.jcache.version>
@@ -225,6 +226,7 @@
         <opencmis.version>0.13.0</opencmis.version>
         <olingo-odata2.version>2.0.5</olingo-odata2.version>
         <orika.version>1.4.6-SNAPSHOT</orika.version>
+        <paypal.sdk.version>2.14.117</paypal.sdk.version>
         <proguard.version>5.2.1</proguard.version>
         <proguard.maven.plugin.version>2.0.11</proguard.maven.plugin.version>
         <proguard.maven.plugin.skip>true</proguard.maven.plugin.skip>
@@ -826,6 +828,16 @@
                 <groupId>com.stripe</groupId>
                 <artifactId>stripe-java</artifactId>
                 <version>${stripe.api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.paypal.sdk</groupId>
+                <artifactId>merchantsdk</artifactId>
+                <version>${paypal.sdk.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.cybersource</groupId>
+                <artifactId>cybersource-sdk-java</artifactId>
+                <version>${cybersource.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.twilio.sdk</groupId>
