--- a/pom.xml
+++ b/pom.xml
@@ -249,7 +249,7 @@
         <sockjsclient.webjars.version>1.0.3</sockjsclient.webjars.version>
         <!--spring.cloud.version>Brixton.M2</spring.cloud.version-->
         <!--spring-data-releasetrain.version>Hopper-M1</spring-data-releasetrain.version-->
-        <spring-session.version>1.1.0.M1</spring-session.version>
+        <spring-session.version>1.1.1.RELEASE</spring-session.version>
         <spring-social-twitter.version>1.1.3.PATCHED-2</spring-social-twitter.version>
         <supercsv.version>2.4.0</supercsv.version>
         <stripe.api.version>1.48.0</stripe.api.version>
