--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <parent>
         <groupId>io.spring.platform</groupId>
         <artifactId>platform-bom</artifactId>
-        <version>2.0.3.RELEASE</version>
+        <version>2.0.4.RELEASE</version>
         <relativePath/>
     </parent>
 
@@ -236,7 +236,7 @@
         <project.scm.id>github</project.scm.id>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <querydsl.version>3.7.2</querydsl.version>
+        <querydsl.version>4.1.0</querydsl.version>
         <recaptcha4j.version>0.0.7</recaptcha4j.version>
         <reflections.version>0.9.10</reflections.version>
         <redis.embedded.version>0.6</redis.embedded.version>
@@ -248,9 +248,10 @@
         <pace.webjars.version>1.0.2</pace.webjars.version>
         <sockjsclient.webjars.version>1.0.3</sockjsclient.webjars.version>
         <!--spring.cloud.version>Brixton.M2</spring.cloud.version-->
-        <!--spring-data-releasetrain.version>Hopper-M1</spring-data-releasetrain.version-->
+        <spring-data-releasetrain.version>Hopper-RC1</spring-data-releasetrain.version>
         <spring-session.version>1.1.1.RELEASE</spring-session.version>
         <spring-social-twitter.version>1.1.3.PATCHED-2</spring-social-twitter.version>
+        <solr.version>5.5.0</solr.version>
         <supercsv.version>2.4.0</supercsv.version>
         <stripe.api.version>1.48.0</stripe.api.version>
         <stompwebsocket.webjars.version>2.3.4</stompwebsocket.webjars.version>
@@ -407,6 +408,18 @@
                 <type>pom</type>
                 <version>${drools.version}</version>
                 <scope>import</scope>
+            </dependency>
+
+            <!-- Remove once spring-platform updates -->
+            <dependency>
+                <groupId>com.querydsl</groupId>
+                <artifactId>querydsl-jpa</artifactId>
+                <version>${querydsl.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.querydsl</groupId>
+                <artifactId>querydsl-apt</artifactId>
+                <version>${querydsl.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.helger</groupId>
@@ -1661,7 +1674,7 @@
                     </includes>
                     <excludes>
                         <exclude>**/target/**/*</exclude>
-						<exclude>**/node_modules/**/*</exclude>
+                        <exclude>**/node_modules/**/*</exclude>
                         <exclude>**/.idea/**/*</exclude>
                         <exclude>**/.settings/**</exclude>
                         <exclude>**/.svn/**/*</exclude>
