--- a/pom.xml
+++ b/pom.xml
@@ -248,7 +248,7 @@
         <pace.webjars.version>1.0.2</pace.webjars.version>
         <sockjsclient.webjars.version>1.0.3</sockjsclient.webjars.version>
         <!--spring.cloud.version>Brixton.M2</spring.cloud.version-->
-        <spring-data-releasetrain.version>Hopper-RC1</spring-data-releasetrain.version>
+        <spring-data-releasetrain.version>Hopper-SR1</spring-data-releasetrain.version>
         <spring-session.version>1.1.1.RELEASE</spring-session.version>
         <spring-social-twitter.version>1.1.3.PATCHED-2</spring-social-twitter.version>
         <solr.version>5.5.0</solr.version>
