Specify images out dir property for the asciidoctor.

--- a/pom.xml
+++ b/pom.xml
@@ -1421,6 +1421,7 @@
                                 <last-update-label>false</last-update-label>
                                 <language>asciidoc</language>
                                 <imagesdir>images</imagesdir>
+                                <imagesoutdir>${basedir}/target/site/images/</imagesoutdir>
                                 <source-highlighter>coderay</source-highlighter>
                                 <coderay-css>style</coderay-css>
                                 <toclevels>2</toclevels>
