--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,7 @@
     </distributionManagement>
 
     <properties>
-        <amazon.aws.sdk.version>1.10.73</amazon.aws.sdk.version>
+        <amazon.aws.sdk.version>1.10.73</amazon.aws.sdk.version> <!-- Do not Update, waiting on: https://github.com/abashev/vfs-s3/issues/36 -->
         <asciidoctor.version>1.5.3</asciidoctor.version>
         <asciidoctorj.diagram.version>1.3.1</asciidoctorj.diagram.version>
         <atmosphere.version>2.2.6</atmosphere.version>
@@ -162,6 +162,7 @@
         <jawr.version>3.8</jawr.version>
         <jest.version>0.1.7</jest.version>
         <jgravatar.version>1.0</jgravatar.version>
+        <jmeter.maven.plugin.version>1.10.1</jmeter.maven.plugin.version>
         <jquery.webjars.version>1.11.2</jquery.webjars.version>
         <jqueryui.webjars.version>1.11.4</jqueryui.webjars.version>
         <jquerymobile.webjars.version>1.4.5</jquerymobile.webjars.version>
@@ -188,6 +189,7 @@
         <jsoup.version>1.8.3</jsoup.version>
         <jetty.version>9.3.6.v20151106</jetty.version>
         <maven.archetype.plugin.version>2.4</maven.archetype.plugin.version>
+        <maven.filtering.version>1.3</maven.filtering.version>
         <maven.war.plugin.version>2.4</maven.war.plugin.version>
         <maven.surefire.plugin.version>2.19</maven.surefire.plugin.version>
         <maven.javadoc.plugin.version>2.10.3</maven.javadoc.plugin.version>
@@ -244,7 +246,6 @@
         <redis.embedded.version>0.6</redis.embedded.version>
         <riskified.version>1.0.1.7</riskified.version>
         <selenium.version>2.47.0</selenium.version>
-        <!-- spring-io platform uses this property for selenium version -->
         <smartsprites.version>0.2.12</smartsprites.version>
         <slick.webjars.version>1.5.0</slick.webjars.version>
         <pace.webjars.version>1.0.2</pace.webjars.version>
@@ -427,7 +428,7 @@
             </dependency>
             <dependency>
                 <groupId>com.amazonaws</groupId>
-                <artifactId>aws-java-sdk</artifactId>
+                <artifactId>aws-java-sdk-s3</artifactId>
                 <version>${amazon.aws.sdk.version}</version>
                 <exclusions>
                     <exclusion>
