--- a/pom.xml
+++ b/pom.xml
@@ -149,7 +149,7 @@
         <hibernate.version>5.1.0.Final</hibernate.version>
         <hibernate.hydrate.version>2.3</hibernate.hydrate.version>
         <!-- Upgrade once hazelcast supports hibernate5-->  <!-- Remove once boot updates -->
-        <hazelcast.version>3.7-EA</hazelcast.version>
+        <hazelcast.version>3.6.2</hazelcast.version>
         <infinispan.version>8.1.0.Final</infinispan.version>
         <itextpdf5.version>5.5.9</itextpdf5.version>
         <java.version>1.8</java.version>
