--- a/pom.xml
+++ b/pom.xml
@@ -1525,7 +1525,7 @@
                 <executions>
                     <execution>
                         <id>checkstyle-check</id>
-                        <phase>install</phase>
+                        <phase>prepare-package</phase>
                         <goals>
                             <goal>check</goal>
                         </goals>
@@ -1553,7 +1553,7 @@
                 <executions>
                     <execution>
                         <id>check</id>
-                        <phase>install</phase>
+                        <phase>prepare-package</phase>
                         <goals>
                             <goal>check</goal>
                         </goals>
@@ -1570,7 +1570,7 @@
                 <executions>
                     <execution>
                         <id>findbugs-check</id>
-                        <phase>install</phase>
+                        <phase>prepare-package</phase>
                         <goals>
                             <goal>check</goal>
                         </goals>
