Remove the firefox profile and introduce new selenium properites.

--- a/pom.xml
+++ b/pom.xml
@@ -1761,7 +1761,6 @@
             <id>test</id>
             <properties>
                 <env>test</env>
-                <selenium.driver>phantomjs</selenium.driver>
             </properties>
             <build>
                 <plugins>
@@ -1850,7 +1849,7 @@
                         </executions>
                         <configuration>
                             <!--argLine>${failsafeArgLine}</argLine-->
-                            <argLine>-Xms512m -Xmx1024m -XX:MaxMetaspaceSize=256m</argLine>
+                            <argLine>-Xms512m -Xmx1024m -XX:MaxMetaspaceSize=256m -Dfile.encoding=UTF-8</argLine>
                             <useManifestOnlyJar>false</useManifestOnlyJar>
                             <useSystemClassLoader>true</useSystemClassLoader>
                             <trimStackTrace>false</trimStackTrace>
@@ -1860,20 +1859,22 @@
                                 <include>**/*IntegrationTest.java</include>
                             </includes>
                             <systemPropertyVariables>
-                                <spring.profiles.active>test,${selenium.driver}</spring.profiles.active>
-                                <phantomjs.binary.path>${phantomjs.binary}</phantomjs.binary.path>
+                                <spring.profiles.active>test</spring.profiles.active>
+                                <browser>${browser}</browser>
+                                <screenshotDirectory>${project.build.directory}/screenshots/</screenshotDirectory>
+                                <htmlSourceDirectory>${project.build.directory}/html-source/</htmlSourceDirectory>
+                                <remoteDriver>${remote}</remoteDriver>
+                                <gridURL>${seleniumGridURL}</gridURL>
+                                <desiredPlatform>${platform}</desiredPlatform>
+                                <desiredBrowserVersion>${browserVersion}</desiredBrowserVersion>
+                                <proxyEnabled>${proxyEnabled}</proxyEnabled>
+                                <proxyHost>${proxyHost}</proxyHost>
+                                <proxyPort>${proxyPort}</proxyPort>
                             </systemPropertyVariables>
                         </configuration>
                     </plugin>
                 </plugins>
             </build>
-        </profile>
-        <profile>
-            <id>firefox</id>
-            <properties>
-                <phantonjs.maven.plugin.skip>true</phantonjs.maven.plugin.skip>
-                <selenium.driver>firefox</selenium.driver>
-            </properties>
         </profile>
     </profiles>
 </project>
