--- a/pom.xml
+++ b/pom.xml
@@ -1698,6 +1698,40 @@
                     </licenseFamilies>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>license-maven-plugin</artifactId>
+                <version>1.9</version>
+                <executions>
+                    <execution>
+                        <id>default-cli</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>add-third-party</goal>
+                        </goals>
+                        <configuration>
+							<failIfWarning>false</failIfWarning>
+							<sortArtifactByName>true</sortArtifactByName>
+							<excludedLicenses>
+                                <excludedLicense>GNU Affero General Public License (AGPL) version 3.0</excludedLicense>
+                                <excludedLicense>GNU General Public License (GPL) version 1.0</excludedLicense>
+                                <excludedLicense>GNU General Public License (GPL) version 2.0</excludedLicense>
+                                <excludedLicense>GNU General Public License (GPL) version 3.0</excludedLicense>
+							</excludedLicenses>
+                            <licenseMerges>
+                                <licenseMerge>The Apache Software License, Version 2.0|Apache Software License, version 2.0|Apache License, Version 2.0|Apache Public License 2.0|Apache 2</licenseMerge>
+                                <licenseMerge>Apache Software Licenses|Apache Software License</licenseMerge>
+                                <licenseMerge>GNU General Public License, v2.0|GNU GENERAL PUBLIC LICENSE Version 2, June 1991|GNU General Public License, Version 2.0</licenseMerge>
+                                <licenseMerge>Common Development and Distribution License (CDDL), version 1.0| Common Development and Distribution License (CDDL) v1.0|COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL), Version 1.0</licenseMerge>
+                                <licenseMerge>GNU Lesser General Public License, version 2.1|LGPL 2.1|GNU LESSER GENERAL PUBLIC LICENSE, Version 2.1</licenseMerge>
+                                <licenseMerge>GNU Lesser General Public License|GNU LESSER GENERAL PUBLIC LICENSE</licenseMerge>
+                                <licenseMerge>Mozilla Public License version 1.1|MPL 1.1</licenseMerge>
+                                <licenseMerge>BSD Style License|BSD License|BSD style|BSD style License</licenseMerge>
+                            </licenseMerges>
+                        </configuration>
+                    </execution>
+                </executions>
+             </plugin>
         </plugins>
     </build>
 
