--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,15 @@
   ~ Information and shall use it only in accordance with the terms of the
   ~ license agreement you entered into with nemesis.
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>io.spring.platform</groupId>
         <artifactId>platform-bom</artifactId>
         <version>2.0.5.RELEASE</version>
-        <relativePath />
+        <relativePath/>
     </parent>
 
     <groupId>com.nemesis</groupId>
@@ -120,11 +121,13 @@
     </distributionManagement>
 
     <properties>
-        <amazon.aws.sdk.version>1.10.73</amazon.aws.sdk.version> <!-- Do not Update, waiting on: https://github.com/abashev/vfs-s3/issues/36 -->
+        <amazon.aws.sdk.version>1.10.73
+        </amazon.aws.sdk.version> <!-- Do not Update, waiting on: https://github.com/abashev/vfs-s3/issues/36 -->
         <asciidoctor.version>1.5.3</asciidoctor.version>
         <asciidoctorj.diagram.version>1.3.1</asciidoctorj.diagram.version>
         <atmosphere.version>2.2.6</atmosphere.version>
-        <checkstyle.violation.ignore>RedundantThrows,NewlineAtEndOfFile,ParameterNumber,MethodLength,FileLength</checkstyle.violation.ignore>
+        <checkstyle.violation.ignore>RedundantThrows,NewlineAtEndOfFile,ParameterNumber,MethodLength,FileLength
+        </checkstyle.violation.ignore>
         <codemodel.version>2.8.5</codemodel.version>
         <codemirror.webjars.version>5.1</codemirror.webjars.version>
         <commons.collections4.version>4.1</commons.collections4.version>
@@ -228,6 +231,7 @@
         <nemesis.version>1.2.0.BUILD-SNAPSHOT</nemesis.version>
         <opencmis.version>0.14.0</opencmis.version>
         <olingo-odata2.version>2.0.5</olingo-odata2.version>
+        <oracle.version>12.1.0.2</oracle.version>
         <orika.version>1.4.6-SNAPSHOT</orika.version>
         <paypal.sdk.version>2.14.117</paypal.sdk.version>
         <proguard.version>5.2.1</proguard.version>
@@ -281,6 +285,17 @@
             <releases>
                 <enabled>true</enabled>
             </releases>
+        </repository>
+        <repository>
+            <id>maven.oracle.com</id>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <url>https://maven.oracle.com</url>
+            <layout>default</layout>
         </repository>
         <repository>
             <id>nemesis-repository-releases</id>
@@ -538,6 +553,16 @@
                 <groupId>org.gridgain</groupId>
                 <artifactId>gridgain-hibernate</artifactId>
                 <version>${gridgain.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.oracle.jdbc</groupId>
+                <artifactId>ojdbc7</artifactId>
+                <version>${oracle.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.oracle.jdbc</groupId>
+                <artifactId>ucp</artifactId>
+                <version>${oracle.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
@@ -907,7 +932,7 @@
                 <artifactId>nemesis-module-ehcache</artifactId>
                 <version>${nemesis.version}</version>
             </dependency>
-			<dependency>
+            <dependency>
                 <groupId>com.nemesis.platform.module.cache</groupId>
                 <artifactId>nemesis-module-hazelcast</artifactId>
                 <version>${nemesis.version}</version>
@@ -1658,7 +1683,7 @@
                     </includes>
                     <excludes>
                         <exclude>**/target/**/*</exclude>
-						<exclude>**/node_modules/**/*</exclude>
+                        <exclude>**/node_modules/**/*</exclude>
                         <exclude>**/.idea/**/*</exclude>
                         <exclude>**/.settings/**</exclude>
                         <exclude>**/.svn/**/*</exclude>
@@ -1669,7 +1694,7 @@
                         <license implementation="org.apache.rat.analysis.license.SimplePatternBasedLicense">
                             <licenseFamilyCategory>AL2</licenseFamilyCategory>
                             <licenseFamilyName>Apache License 2.0</licenseFamilyName>
-                            <notes />
+                            <notes/>
                             <patterns>
                                 <pattern>Licensed to the Apache Software Foundation (ASF) under one</pattern>
                             </patterns>
@@ -1677,7 +1702,7 @@
                         <license implementation="org.apache.rat.analysis.license.SimplePatternBasedLicense">
                             <licenseFamilyCategory>NPCL</licenseFamilyCategory>
                             <licenseFamilyName>Nemesis Platform Commercial License 1.0</licenseFamilyName>
-                            <notes />
+                            <notes/>
                             <patterns>
                                 <pattern>nemesis Platform - NExt-generation Multichannel E-commerce SYStem</pattern>
                             </patterns>
