--- a/pom.xml
+++ b/pom.xml
@@ -989,6 +989,11 @@
             </dependency>
             <dependency>
                 <groupId>com.nemesis.platform.module</groupId>
+                <artifactId>nemesis-module-creditaccount</artifactId>
+                <version>${nemesis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.nemesis.platform.module</groupId>
                 <artifactId>nemesis-module-social</artifactId>
                 <version>${nemesis.version}</version>
             </dependency>
